# fcl

./: CallLogging.md  Cargo.toml  README.md  map.md
call_graph/: Cargo.toml
call_graph/src/: lib.rs
code_commons/: Cargo.toml  ReadMe.md
code_commons/src/: call_graph.rs  lib.rs
fcl/: Cargo.toml
fcl/src/: call_log_infra.rs  common.rs  decorators.rs  lib.rs  multithreaded.rs  output_sync.rs  singlethreaded.rs  tests.rs  tests_algo_add_call.rs  thoughts.txt  traits.rs  writer.rs
fcl/src/call_log_infra/: writer.rs
fcl/src/common/: call_log_infra.rs  decorators.rs  multithreaded.rs  output_sync.rs  singlethreaded.rs
fcl/src/common/call_log_infra/: writer.rs
fcl/src/writer/: non_minimal_writer.rs
fcl/tests/: add_call.rs  add_loop_end.rs  add_loopbody_end.rs  add_loopbody_start.rs  add_ret.rs  basics.rs  basics_.rs  mod.rs
fcl/tests/call_graph/: add_call.rs  add_loop_end.rs  add_loopbody_end.rs  add_loopbody_start.rs  add_ret.rs  basics.rs  mod.rs
fcl/tests/common/: mod.rs
fcl/tests/proc_macros/: mod.rs  non_loggable_attr.rs  proc_macro_args.rs  proc_macro_params.rs
fcl/tests/proc_macros/proc_macro_args/: call_params.rs  closure_coords.rs  fn_fn_call_params.rs  fn_fn_closure_coords.rs  fn_init_fn.rs  impl_struct_fn.rs  mod.rs  mod_fn.rs  trait_fn.rs  trait_macro.rs
fcl_decorators/: Cargo.toml
fcl_decorators/src/: lib.rs
fcl_doc/: README.md  UserManual.md  mdBook.md
fcl_proc_macros/: Cargo.toml
fcl_proc_macros/src/: consts.rs  exprs.rs  items.rs  lib.rs
fcl_traits/: Cargo.toml
fcl_traits/src/: lib.rs
user/: Cargo.toml  log.txt
user/src/: main.rs
user_all/: Cargo.toml  log.txt
user_all/src/: main.rs
