# Function Call Logger (fcl).
[workspace]
resolver = "3"

members = [ "code_commons",
    # Rust code.
    "fcl", 
    
    # Proc macros. Compiled before the actual compilation of other crates.                  
    "fcl_proc_macros", 

    # Bin crates to run/test the fcl.
    "user", 
    "user_all",                 
]
