[package]
name = "fcl"
version = "0.1.0"
edition = "2024"

[dependencies]
filedescriptor = "0.8.3"
tempfile = "3.20.0"
#serial_test = "3.2.0"
#serial_test = "3.3.1"
regex = "1.12.3"

code_commons = { path = "../code_commons" }
fcl_proc_macros = { path = "../fcl_proc_macros" }
#fcl_proc_macros = { path = "../fcl_proc_macros", features = ["singlethreaded"] }

[features]
#idle = [                    # No code of this crate is compiled.
#    "code_commons/idle",    # No code of this crate is compiled.
#    "fcl_proc_macros/idle"  # Instrumentation is skipped.
#] 
##idle = [] # No code of this crate is compiled.

# default = ["singlethreaded"]
singlethreaded = []
#singlethreaded = [ "fcl_proc_macros/singlethreaded" ]

minimal_writer = [ "singlethreaded" ]