[package]
name = "fcl_proc_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[dependencies]
# NOTE: Defines `proc_macro2` (with underscore).
proc-macro2 = { version = "1.0.95", optional = true, default-features = false }     #, features = ["span-locations"] }     
# proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true }          #, default-features = false }      #, features = ["full"] }


[features] 
common = [                          # Code common for "single_threaded" and "multithreaded". Most of the code.
    "dep:proc-macro2",              #   Enable "proc-macro2/span-locations" (dependency and feature).
    "proc-macro2/span-locations",

    "dep:quote",                    #   Enable "quote" (dependency and default features).

    "dep:syn",                      #   Enable "syn/full" (dependency, default features and the "full" feature).
    "syn/full",
]                    

params_logging = [ "common" ]       # Logs the fn and closure params.
closure_coords_logging = [ "common" ]   # Logs the closure coordianates.
ret_val_logging = [ "common" ]      # Log the function and closure (TODO: loop) return values.

single_threaded = ["common"]        # Code has exta `.borrow[_mut]()`.
multithreaded = ["common"]          # At the moment of writing is the same as "common".
