[package]
name = "user_all"
version = "0.1.0"
edition = "2024"

[dependencies]
fcl = { path = "../fcl" }
fcl_proc_macros = { path = "../fcl_proc_macros" }
# fcl = { path = "../fcl", features = ["singlethreaded"] }
# fcl_proc_macros = { path = "../fcl_proc_macros", features = ["singlethreaded"] }
# fcl = { path = "../fcl", features = ["minimal_writer"] }
# fcl_proc_macros = { path = "../fcl_proc_macros", features = ["singlethreaded"] }
